# feroce-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.gpu  README.md
ci/: Dockerfile
feroce/: Cargo.toml  build.rs
feroce-cli/: Cargo.toml
feroce-cli/src/: common.rs  ctrl.rs  dump.rs  main.rs  recv.rs  send.rs  stats.rs  tui.rs  tui_logger.rs
feroce-cli/tests/: loopback.rs
feroce/src/: connection.rs  error.rs  lib.rs  protocol.rs  runtime.rs
feroce/src/rdma/: buffer_pool.rs  device.rs  ffi.rs  gpu.rs  mod.rs  test_utils.rs
