[package]
name = "feroce-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = ["feroce/gpu"]
rdma-test = ["feroce/rdma-test"]

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
env_logger = "0.11.9"
feroce = { path = "../feroce" }
log = "0.4.29"
signal-hook = "0.4.3"
